--- a/the-board/src/main/resources/templates/fragments/footer.html
+++ b/the-board/src/main/resources/templates/fragments/footer.html
@@ -11,27 +11,21 @@
 <body>
 
 
-<footer th:fragment="footer">
-    <div class="mb-5 container-fluid fixed-bottom">
+<footer th:fragment="footer" class="fixed-bottom">
+    <div class="container-fluid">
         <hr>
-        <p>Powered by Kim Jin Yeung |
-
-            <!--GitHub-->
+        <p class="text-center mb-0">Powered by Kim Jin Yeung |
             <a href="https://github.com/yashin20/TaskApp" target="_blank" class="github-icon">
                 <i class="bi bi-github"></i>
                 GitHub
-            </a>
-
-             |
-
-            <!--Phone-->
+            </a> |
             <i class="bi bi-phone-fill"></i>
-            <i class="phone-number"> [Phone Number] </i>
-
-
+            <span class="phone-number"> [Phone Number] </span>
         </p>
     </div>
 </footer>
+
+
 
 
 </body>
