--- a/the-board/src/main/resources/templates/posts/post-info.html
+++ b/the-board/src/main/resources/templates/posts/post-info.html
@@ -9,6 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <style>
+        .child-comment {
+            max-width: 600px; /* 원하는 최대 폭 설정 */
+            margin-left: auto; /* 오른쪽 정렬 */
+        }
+    </style>
 </head>
 <body class="d-flex flex-column">
 <!--header-->
@@ -141,6 +147,16 @@
         // 수정 폼을 숨기고 댓글 내용을 다시 표시합니다.
         document.getElementById('comment-content-' + commentId).style.display = 'block';
         document.getElementById('edit-comment-form-' + commentId).style.display = 'none';
+    }
+
+    function replyToComment(commentId) {
+        // 답글 폼을 표시합니다.
+        document.getElementById('reply-comment-form-' + commentId).style.display = 'block';
+    }
+
+    function cancelReply(commentId) {
+        // 답글 폼을 숨깁니다.
+        document.getElementById('reply-comment-form-' + commentId).style.display = 'none';
     }
 
 </script>
