--- a/the-board/src/main/resources/templates/fragments/footer.html
+++ b/the-board/src/main/resources/templates/fragments/footer.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <hr>
         <p class="text-center mb-0">Powered by Kim Jin Yeung |
-            <a href="https://github.com/yashin20/TaskApp" target="_blank" class="github-icon">
+            <a href="https://github.com/yashin20/the-board" target="_blank" class="github-icon">
                 <i class="bi bi-github"></i>
                 GitHub
             </a> |
